--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -185,16 +185,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-
-      - name: TEST
-        working-directory: macos/liblmdb-0.9.33/lib/
-        run: file liblmdb.dylib
-        
-        
-      - name: Install dependencies
-        run: |
-          brew install CocoaPods lmdb create-dmg
-          brew info lmdb
           
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -212,31 +202,10 @@ jobs:
           version: "26.x"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
         
-      - name: Install the Rust dependencies
-        run: cargo install 'flutter_rust_bridge_codegen' rinf protoc-gen-prost
-        
-      - name: Activate Protobuf
-        run: flutter pub global activate protoc_plugin
-        
-      - name: Flutter pub get
-        run: flutter pub get
-        
-      - name: Generate message files
-        run: rinf message 
-        
       - uses: benjlevesque/short-sha@v3.0
         id: short-sha
         with:
           length: 7
-          
-      - name: Build macOS 
-        run: |
-          cd macos
-          pod update
-          cd ..
-          flutter build macos --release
-          chmod -R +x build/macos/Build/Products/Release/player.app
-          xattr -cr build/macos/Build/Products/Release/player.app
 
       - name: Install certificates
         env:
@@ -246,7 +215,7 @@ jobs:
         run: |
           # create variables
           DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH=$RUNNER_TEMP/build_developerID_application_certificate.p12
-          KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
+          KEYCHAIN_PATH=$RUNNER_TEMP/rune-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
           echo -n "$DEVELOPER_ID_APPLICATION_P12_BASE64_MAC" | base64 --decode --output $DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH
@@ -261,6 +230,18 @@ jobs:
           security import $DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security list-keychain -d user -s $KEYCHAIN_PATH
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+      - name: All 
+        run: |
+          brew install just
+          just macos-ci-all
+        env:
+          DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
       - name: Replace System Dylib
         run: |
@@ -288,8 +269,18 @@ jobs:
       - name: Upload artifact macOS DMG
         uses: actions/upload-artifact@v4
         with:
-          path: "*.dmg"
+          path: "temp_macos/*.dmg"
           name: Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-macOS
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: |
+          just macos-ci-clean
+          if [ -f "$RUNNER_TEMP/rune-signing.keychain-db" ]; then
+            echo "$RUNNER_TEMP/rune-signing.keychain-db"
+            security delete-keychain $RUNNER_TEMP/rune-signing.keychain-db
+          fi
+          rm -f .env
 
   release-macos:
     permissions:
